[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/credit/credits.gd" type="Script" id=1]
[ext_resource path="res://asset/snd/Interface_Bleeps_OGG/Click_04.ogg" type="AudioStream" id=2]

[node name="credits" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
__meta__ = {
"_editor_description_": ""
}

[node name="panel" type="PanelContainer" parent="."]
margin_left = 365.0
margin_top = 124.0
margin_right = 659.0
margin_bottom = 476.0

[node name="margin" type="MarginContainer" parent="panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 292.0
margin_bottom = 350.0

[node name="main" type="VBoxContainer" parent="panel/margin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 282.0
margin_bottom = 340.0

[node name="label" type="Label" parent="panel/margin/main"]
margin_right = 274.0
margin_bottom = 55.0
text = "Starry Night Credits
---------------------"
align = 1
valign = 1

[node name="credits" type="Label" parent="panel/margin/main"]
margin_top = 59.0
margin_right = 274.0
margin_bottom = 230.0
text = "Developer:
    - Ruben Alvarez Reyes
Authors:
    - Ruben Alvarez Reyes
    - Qinru
	"
valign = 1

[node name="github" type="Button" parent="panel/margin/main"]
margin_top = 234.0
margin_right = 274.0
margin_bottom = 264.0
focus_neighbour_top = NodePath("../exit")
text = "Source code link redirect"

[node name="return" type="Button" parent="panel/margin/main"]
margin_top = 268.0
margin_right = 274.0
margin_bottom = 298.0
size_flags_horizontal = 3
text = "Return to Game"

[node name="exit" type="Button" parent="panel/margin/main"]
margin_top = 302.0
margin_right = 274.0
margin_bottom = 332.0
focus_neighbour_bottom = NodePath("../github")
size_flags_horizontal = 3
text = "Exit Game"

[connection signal="draw" from="." to="." method="_on_credits_draw"]
[connection signal="pressed" from="panel/margin/main/github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="panel/margin/main/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="panel/margin/main/exit" to="." method="_on_exit_pressed"]
